--- a/Socket/Socket.vcxproj.filters
+++ b/Socket/Socket.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="server.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="server_s.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
