--- a/Socket_c/Socket_c.vcxproj.filters
+++ b/Socket_c/Socket_c.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="client.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="client_s.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
