--- a/Socket_c/Socket_c.vcxproj
+++ b/Socket_c/Socket_c.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="client3.c" />
+    <ClCompile Include="client.c" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
