--- a/Socket_c/Socket_c.vcxproj.filters
+++ b/Socket_c/Socket_c.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="client3.c">
+    <ClCompile Include="client.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
